<resources>
    <string name="app_name">Mini_p_mok</string>
    <string name="Command_list">Command List</string>
    <string name="bienvenue">Bienvenue</string>
    <string name="Commande_en_attente">Commande en attente</string>
    <string name="Ajouter_une_Commande">Add Command</string>
    <string name="AddClient">Add Client</string>
    <string name="Retour">Retour</string>
    <string name="Commande__en_attente">"                       Commande en attente"</string>
    <string name="Commande">Commande</string>
    <string name="enattente">  En attente</string>
    <string name="AddProd">Add Product</string>
    <string name="Liste_produit">Liste Produit</string>
    <string name="Ajouterprod">Add product</string>
    <string name="Ajoutercom">Add Command</string>
    <string name="Addcomm">Add command</string>
    <string name="produit_list">Product List</string>
    <string name="Market_place">Market Place</string>
    <string name="TakeyourShop">Take you\'r Shop</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign in</string>
    <string name="DT">DT</string>
    <string name="Delete">Delete</string>
    <string name="Update">Update</string>
    <string name="Add_Favori">Add Favori</string>
    <string name="Masquer">Masquer</string>
</resources>